# Hypo-Arena

./: .env.example  .gitignore  README.md  orchestrate.bash  pyproject.toml
basics/: __init__.py  chat.py  domain.py  io.py  models.py  parsing.py  paths.py  platform.py  responses.py  runtime.py  schema.py  tracing.py
construction/: __init__.py  agents.py  prompts.py  runtime.py  schema.py  source_input.py
evaluation/: __init__.py  agents.py  arena.py  markdown.py  prompts.py  rubric.py  schema.py  score.py
generation/: __init__.py  agents.py  prompts.py  runtime.py  schema.py  skills.py
orchestrator/: __init__.py  atomic.py  keys.py  stage.py  supervisors.py
scripts/: _agent_generate.bash  _agent_generate_12.bash  _backfill.bash  _baseline_patch.bash  _eval_qwen_beta.bash  _full_eval.bash  _full_eval_live.bash  _full_generate.bash  _old_models_eval.bash  _paper_common.py  _paper_stats.py  _qwen_beta_agent.bash  _regen_gemini.bash  _score_all_models.bash  _smoke_arena.bash  _smoke_eval.bash  _smoke_generate.bash  ops_monitor.py  paper_alignment_ml.py  paper_arena.py  paper_arena_all.py  paper_arena_cross_baseline.py  paper_arena_vs_arena.py  paper_arena_vs_recall.py  paper_arena_vs_score.py  paper_baseline_vs_agent.py  paper_dataset_statistics.py  paper_domain_distribution.py  paper_recall.py  paper_score.py  paper_score_details.py  probe_judge.py  probe_platform.py  probe_smoke.py  run_construct.py  run_evaluate.py  run_generate.py  run_orchestrate.py  util_build_hypodata.py  util_prune_cases.py  (+3 more)
tests/: test_basics.py  test_evaluation_parsing.py  (+6 more)
(+12 files in other folders)
